--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,18 @@
           <version>19.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-csv</artifactId>
+          <version>1.2</version>
+      </dependency>
+
+      <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.3.1</version>
+      </dependency>
+
   </dependencies>
 
     <build>
